优化router性能