@@ -9,6 +9,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @Order(Ordered.HIGHEST_PRECEDENCE)
@@ -18,9 +19,9 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true); // 允许携带 Cookie
-        config.setAllowedOrigins(Arrays.asList("http://localhost:5700")); // 允许的前端域名
+        config.setAllowedOrigins(List.of("http://localhost:4173")); // 允许的前端域名
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 允许的 HTTP 方法
-        config.setAllowedHeaders(Arrays.asList("*")); // 允许所有请求头
+        config.setAllowedHeaders(List.of("*")); // 允许所有请求头
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
